<resources>
    <string name="app_name">Auto Chem</string>

    <string name="wrongPack">Received Wrong Packet</string>

    <string name="readFailed">Unable to get the values</string>

    <string name="update_success">Update Success</string>

    <string name="update_failed">Update Failed</string>

    <string name="connection_failed">Bluetooth Disconnected</string>

    <string name="timeout">Timeout</string>

    <string name="accessories_timer_header">ACCESSORY TIMER</string>

    <string name="mode">MODE</string>

    <string name="output">OUTPUT</string>

    <string name="output_type">OUTPUT TYPE</string>

    <string name="duration">DURATION</string>

    <string name="hh">HH</string>

    <string name="mm">MM</string>

    <string name="ss">SS</string>

    <string name="double_zero">00</string>

    <string name="enable">ENABLE</string>

    <string name="start">START</string>

    <string name="week1_enable">Enable Week-1</string>

    <string name="week2_enable">Enable Week-2</string>

    <string name="week3_enable">Enable Week-3</string>

    <string name="week4_enable">Enable Week-4</string>

    <string name="ok">OK</string>

    <string name="cancel">CANCEL</string>

    <string name="apply_to_all">APPLY TO ALL</string>

    <string name="input_number">Input Number</string>
    <string name="sequence_number">Sequence Number</string>
    <string name="input_name">Input Label</string>
    <string name="sensor_type">Sensor Type</string>
    <string name="sensor_activation">Sensor Activation</string>
    <string name="temp_value">Temperature Value</string>
    <string name="low_alarm">Low Alarm</string>
    <string name="high_alarm">High Alarm</string>
    <string name="smoothing_factor">Smoothing Factor</string>
    <string name="calibration_req_alarm">Calibration Required Alarm</string>
    <string name="reset_calibration">Reset Calibration</string>
    <string name="buffer_type">Buffer Type</string>
    <string name="temp_sensor_linked">Temperature Sensor Linked</string>
    <string name="cell_constant">Cell Constant</string>
    <string name="comp_type">Compensation Type</string>
    <string name="comp_factor">Compensation Factor</string>
    <string name="defaullt_temp_value">Default Temperature</string>
    <string name="temp_linked">Temperature Linked</string>
    <string name="unit">Unit</string>
    <string name="open_message">Open Message</string>
    <string name="close_message">Close Message</string>
    <string name="reset_time">Reset Time</string>
    <string name="total_time">Total Time</string>
    <string name="alarm">Alarm</string>
    <string name="interlock">InterLock</string>
    <string name="activate">Activate with Channel</string>
    <string name="modbus_type">Modbus Type</string>
    <string name="modbus_factor">Alloy Factor</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="diagnostic_sweep">Diagnostic sweep</string>
    <string name="value_type">Type of value Read</string>
    <string name="time">Time</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="flow_unit">Flow Unit</string>
    <string name="totalizer_alarm">Totalizer Alarm</string>
    <string name="reset_flow_total">Reset Flow Total</string>
    <string name="scheduled_reset">Scheduled Reset</string>
    <string name="flowmeter_type">Flow Meter Type</string>
    <string name="set_flow_total">Set Flow Total</string>
    <string name="k_factor">K Factor</string>
    <string name="total_alarm_mode">Total Alarm Mode</string>
    <string name="flow_alarm_mode">Flow Alarm Mode</string>
    <string name="flow_alarm_delay">Flow Alarm Delay(MMSS)</string>
    <string name="flow_alarm_clear">Flow Alarm Clear</string>
    <string name="output_relay_link">Output Relay Link</string>
    <string name="volume_contact">Volume/Contact</string>
    <string name="flowmeter_min">Flow Meter Min</string>
    <string name="flowmeter_max">Flow Meter Max</string>
    <string name="analog_type">Analog Type</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="input_name_validation">Input Label cannot be Empty</string>
    <string name="sensor_activation_validation">Select Sensor Activation value</string>
    <string name="alarm_low_validation">Alarm Low Factor Cannot be Empty</string>
    <string name="ph_alarm_low_validation">Alarm Low Factor should be less than 14</string>
    <string name="ph_alarm_high_validation">Alarm High Factor should be less than 14</string>
    <string name="orp_alarm_low_validation">Alarm Low Factor should be less than 2000</string>
    <string name="orp_alarm_high_validation">Alarm High Factor should be less than 2000</string>
    <string name="alarm_high_validation">Alarm High Factor cannot be Empty</string>
    <string name="smoothing_factor_validation">Smoothing factor cannot be Empty</string>
    <string name="smoothing_factor_vali">Smoothing factor should be less than 90</string>
    <string name="calibration_alarm_vali">Calibration Required Alarm cannot be Empty</string>
    <string name="calibration_alarm_validation">Calibration Required Alarm should be less than 365</string>
    <string name="reset_calibration_validation">Select Reset Calibration value</string>
    <string name="buffertype_validation">Choose any mode of Buffer Type</string>
    <string name="temp_sensor_linked_valid">Select Temperature Sensor Linked value</string>
    <string name="alarm_limit_validation">Alarm High should be greater than Alarm Low</string>
    <string name="temp_limit_validation">Temperature value should be -20 to 500</string>
    <string name="call_constant_validation">Cell Constant Cannot be Empty</string>
    <string name="call_constant_maxvalidation">Cell Constant should be less than 10</string>
    <string name="compensation_type_validation">Compensation Type Cannot be Empty</string>
    <string name="compensation_factor_validation">Temperature Compensation Factor Cannot be Empty</string>
    <string name="compensation_factor_maxvalidation">Compensation Factor should be less than 20</string>
    <string name="compensation_factor_decimal_validation">Compensation Factor decimal values should be 0</string>
    <string name="temperature_validation">Temperature Value Cannot be Empty</string>
    <string name="unit_validation">Unit Of Measurement Cannot be Empty</string>
    <string name="temperature_linked_validation">Temperature Linked Cannot be Empty</string>
    <string name="default_temp_validation">Default Temperature Value Cannot be Empty</string>
    <string name="openmessage_validation">Open message cannot be Empty</string>
    <string name="closemessage_validation">Close message cannot be Empty</string>
    <string name="reset_time_validation">Reset Time cannot be Empty</string>
    <string name="total_time_validation">Total time cannot be Empty</string>
    <string name="interlock_validation">Select the Interlock mode</string>
    <string name="activatechannal_validation">Select the Activate with Channel mode</string>
    <string name="alarm_mode_validation">Select the Alarm mode</string>
    <string name="modbus_type_validation">Select the Modbus Type</string>
    <string name="min_validation">Min Value cannot be Empty</string>
    <string name="max_validation">Max Value cannot be Empty</string>
    <string name="diagnostic_validation">Diagnostic sweep cannot be Empty</string>
    <string name="time_validation">Invalid Time (HH:MM:SS)</string>
    <string name="hh_validation">Invalid Hour (HH:MM:SS)</string>
    <string name="minu_validation">Invalid Minutes (HH:MM:SS)</string>
    <string name="ss_validation">Invalid Seconds (HH:MM:SS)</string>
    <string name="flowmeter_type_vali">Select the Flowmeter Type</string>
    <string name="totalizer_vali">Totalizer Alarm cannot be Empty</string>
    <string name="totalizer_analog_vali">Totalizer Alarm value should be less than 2000000000</string>
    <string name="totalizer_feedmonitor_vali">Totalizer Alarm value should be less than 1000000</string>
    <string name="reset_flowtotal_vali">Select the Reset Flow Total option</string>
    <string name="schedule_reset_vali">Select the Scheduled Reset</string>
    <string name="flowunit_vali">Flow Unit cannot be Empty</string>
    <string name="rateunit_vali">Rate unit cannot be Empty</string>
    <string name="flowmin_vali">Flow min cannot be Empty</string>
    <string name="flowmini_vali">Flow min should be less than 1000000</string>
    <string name="flowmax_vali">Flow max cannot be Empty</string>
    <string name="flowmaxi_vali">Flow max should be less than 1000000</string>
    <string name="setflowtotal_vali">Set Flow Total cannot be Empty</string>
    <string name="setflowtotalmax_vali">Set Flow Total value should be less than 1000000000</string>
    <string name="volume_vali">Volume cannot be Empty</string>
    <string name="volume_valida">Volume should be 1 to 100000</string>
    <string name="volume_validation">Volume should less than 7 digit</string>
    <string name="totalizer_validation">Totalizer Alarm should less than 10 digit</string>
    <string name="kfactor_validation">K Factor cannot be Empty</string>
    <string name="kfactor_m3_validation">K Factor should be 1 to 1000000</string>
    <string name="totalalarmmode_validation">Select the Total Alarm Mode</string>
    <string name="flowalarmmode_validation">Flow Alarm Mode cannot be Empty</string>
    <string name="flowalarmdelay_validation">Flow Alarm Delay cannot be Empty</string>
    <string name="flowalarmclear_validation">Flow Alarm Clear cannot be Empty</string>
    <string name="flowalarmdelay_valid">Flow Alarm Delay should be MMSS</string>
    <string name="output_link_validation">Output Relay Link cannot be Empty</string>
    <string name="analogtype_validation">Analog Type cannot be Empty</string>
    <string name="maxmin_validation">Max Value Should be Greater Than Min Value</string>

    <string name="rateunit_valida">Rate Unit should be 1 to 100000</string>
</resources>